--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ button{
     margin-top: 0px;
     margin-left: 20px;
     padding: 0;
-    width: 8vw;
-    height: 14vh;
+    width: 160px;
+    height: 130px;
 }
 
 .logoContainer{
